--- a/springboot-mongodb-cloud/src/main/resources/application.properties
+++ b/springboot-mongodb-cloud/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8081
-spring.data.mongodb.uri=mongodb+srv://admin:admin@medical-app.13dhqtj.mongodb.net/medicaldb
+spring.data.mongodb.uri=<YOUR_URL>
 spring.data.mongodb.database=medicaldb
 spring.jpa.show-sql=true
